fix blockquote spacing

--- a/src/common/styles/base/typography.sass
+++ b/src/common/styles/base/typography.sass
@@ -53,7 +53,7 @@ hr
 
 blockquote
   padding: 0.01rem 0 0.01rem 0.8rem
-  margin: 0 0 0 0.2rem
+  margin: 0 0 1rem 0.2rem
   border-left: 2px solid #eee
 
   p:first-child
